--- a/index.html
+++ b/index.html
@@ -365,27 +365,27 @@
             <div class="team">
                 <div class="team-member">
                     <div class="member-avatar">👨‍💻</div>
-                    <h3 class="member-name">张三</h3>
-                    <p class="member-role">组长 & 软件工程师</p>
+                    <h3 class="member-name">刘一鸣</h3>
+                    <p class="member-role">软件工程师</p>
                     <p>负责手势识别算法开发与系统集成</p>
                 </div>
                 <div class="team-member">
                     <div class="member-avatar">🔧</div>
-                    <h3 class="member-name">李四</h3>
+                    <h3 class="member-name">王冠博</h3>
                     <p class="member-role">嵌入式系统工程师</p>
                     <p>负责无人机飞控系统与硬件集成</p>
                 </div>
                 <div class="team-member">
                     <div class="member-avatar">📐</div>
-                    <h3 class="member-name">王五</h3>
+                    <h3 class="member-name">王润松</h3>
                     <p class="member-role">机械结构工程师</p>
                     <p>负责无人机机架设计与3D打印</p>
                 </div>
                 <div class="team-member">
                     <div class="member-avatar">⚡</div>
-                    <h3 class="member-name">赵六</h3>
-                    <p class="member-role">电子与通信工程师</p>
-                    <p>负责电路设计与通信系统搭建</p>
+                    <h3 class="member-name">宋政泽</h3>
+                    <p class="member-role">材料部件采购主管</p>
+                    <p>负责材料部件的采购</p>
                 </div>
             </div>
         </div>
@@ -485,3 +485,4 @@
     </script>
 </body>
 </html>
+
