Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -744,8 +744,8 @@
                     <div class="member-avatar">
                         <span>👨‍💻</span>
                     </div>
-                    <h3 class="member-name">张明</h3>
-                    <p class="member-role">项目组长 & AI算法工程师</p>
+                    <h3 class="member-name">刘一鸣</h3>
+                    <p class="member-role">AI算法工程师</p>
                     <p class="member-desc">负责手势识别算法开发、系统集成和项目协调</p>
                     <div class="member-skills">
                         <span class="skill-tag">Python</span>
@@ -758,7 +758,7 @@
                     <div class="member-avatar">
                         <span>🔧</span>
                     </div>
-                    <h3 class="member-name">李强</h3>
+                    <h3 class="member-name">王冠博</h3>
                     <p class="member-role">嵌入式系统工程师</p>
                     <p class="member-desc">负责ESP32-S3飞控系统、硬件集成和电机控制</p>
                     <div class="member-skills">
@@ -772,7 +772,7 @@
                     <div class="member-avatar">
                         <span>📐</span>
                     </div>
-                    <h3 class="member-name">王雪</h3>
+                    <h3 class="member-name">王润松</h3>
                     <p class="member-role">机械结构工程师</p>
                     <p class="member-desc">负责手甲结构设计、3D建模和变形机构优化</p>
                     <div class="member-skills">
@@ -786,13 +786,11 @@
                     <div class="member-avatar">
                         <span>⚡</span>
                     </div>
-                    <h3 class="member-name">赵琳</h3>
-                    <p class="member-role">电子与通信工程师</p>
-                    <p class="member-desc">负责电路设计、电源管理和无线通信系统</p>
+                    <h3 class="member-name">宋政泽</h3>
+                    <p class="member-role">材料部件采购主管</p>
+                    <p class="member-desc">负责材料部件的采购</p>
                     <div class="member-skills">
-                        <span class="skill-tag">电路设计</span>
-                        <span class="skill-tag">WiFi/蓝牙</span>
-                        <span class="skill-tag">电源管理</span>
+                        <span class="skill-tag">经费管理</span>
                     </div>
                 </div>
             </div>
@@ -995,3 +993,4 @@
     </script>
 </body>
 </html>
+
