Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <li>包含活体检测与签到去重策略</li>
           </ul>
           <div style="margin-top:12px">
-            <a class="btn" href="#" onclick="alert('请替换为你的仓库地址')">查看源码</a>
+            <a class="btn" href="#" onclick="alert('https://github.com/bloonses/face-attendance.git')">查看源码</a>
             <a class="btn secondary" href="#" onclick="alert('下载计划见仓库或团队共享')">下载学习计划</a>
           </div>
         </div>
@@ -162,3 +162,4 @@
   </script>
 </body>
 </html>
+
