--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <li>包含活体检测与签到去重策略</li>
           </ul>
           <div style="margin-top:12px">
-            <a class="btn" href="#" onclick="alert(https://github.com/bloonses/face-attendance.git)">查看源码</a>
+            <a class="btn" href="https://github.com/bloonses/face-attendance.git">查看源码</a>
             <a class="btn secondary" href="#" onclick="alert('下载计划见仓库或团队共享')">下载学习计划</a>
           </div>
         </div>
@@ -157,10 +157,7 @@
   <script>
     // 小交互：折叠所有 details（如后续扩展可使用）
     document.querySelectorAll('details').forEach(d => d.addEventListener('toggle', e => {}));
-    // 提示替换链接
-    // （在实际部署时把 href 替换为你的 GitHub 仓库或文档地址）
+    // 提示替换链接已应用：'查看源码' 将在当前页打开指定仓库地址
   </script>
 </body>
 </html>
-
-
