--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <button id="startBtn">开始摄像头</button>
     <button id="stopBtn" disabled>停止</button>
     <button id="captureBtn" disabled>截图</button>
-    <button id="sendBtn" disabled>上传截图</button>
+    <button id="sendBtn" disabled>上传到 GoFile</button>
     <a id="downloadLink" style="display:none" download="capture.png">下载截图</a>
   </div>
 
