--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
           <h2>👁️ 实时预览</h2>
         </div>
         <div class="preview-container">
-          <div class="video-wrapper">
+          <div class="video-wrapper" id="videoWrapper">
             <video id="video" autoplay playsinline></video>
-            <div class="video-overlay">
+            <div class="video-overlay" id="videoOverlay">
               <span class="overlay-text">摄像头未启动</span>
             </div>
           </div>
